# bioseq-ood-generalization

./: .gitignore  README.md  RUNPOD_RUNBOOK.md  aggregate.py  analyze_run.py  collect.py  merge_shards.py  pipeline_phases.py  plots.py  pyproject.toml  requirements-cuda.txt  requirements.txt
.github/workflows/: ci.yml
config/: README.md  methods.yaml  models.yaml  training.yaml
config/tuned/: methods.yaml  models.yaml
results_phases/: phaseB_encoder_search.csv  phaseC_baseline_reference.csv  phaseD_top_models.csv  phaseE_method_search.csv  phaseF_all_protocols.csv  phaseF_by_mut_dist.csv  phaseG_analysis.csv  phaseG_by_mut_dist.csv
src/bioseq_ood/config/: __init__.py  loader.py  validation.py
src/bioseq_ood/data/: __init__.py  datasets.py  load_data.py  preprocess_data.py
src/bioseq_ood/evaluation/: __init__.py  aggregate.py  evaluate.py  metrics.py  mutation_distance.py
src/bioseq_ood/methods/: __init__.py  adabn.py  base.py  cmd.py  erm.py  fixmatch.py  hparams.py  mean_teacher.py  pseudo_labeling.py  registry.py
src/bioseq_ood/models/: __init__.py  base.py  cnn.py  cnn_lstm.py  lstm.py  lstm_cnn.py  mlp.py  normalization.py  registry.py  transformer.py
src/bioseq_ood/training/: __init__.py  lightning_module.py  losses.py  run_prediction.py  run_single.py  search.py  selection.py  trainer.py
src/bioseq_ood/utils/: __init__.py  checkpoints.py  logging.py
tests/: conftest.py  test_aggregate.py  test_config.py  test_config_files.py  test_hparams.py  test_lightning.py  test_losses.py  test_models.py  test_selection.py  test_splits.py
